--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     <header class="header">
       <h2>Students</h2>
+
+      <label for="search" class="student-search">
+        <span>Search by name</span>
+        <input id="search" placeholder="Search by name...">
+        <button type="button"><img src="img/icn-search.svg" alt="Search icon"></button>
+      </label>
       
         <!-- Extra Credit: Dynamically insert search form here  
         
@@ -51,6 +57,7 @@
 
     <div class="pagination">
       <ul class="link-list">
+
 
         <!-- Dynamically insert pagination buttons here
 
